--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./app/styles/_variables";
+@import "./app/styles/_base";
+@import "./app/styles/_utilities";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+:root {
+    --black-color: #000; // 0, 0, 0
+    --lighter-black-color: #101010; // 16, 16, 16
+    --darker-white-color: #f8f8f8; // 248, 248, 248
+    --white-color: #fff; // 255, 255, 255
+}
+body {
+    background-color: var(--darker-white-color);
+    color: var(--lighter-black-color);
+    font-family: "Open Sans", "Helvetica Neue", sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0;
+}
+main {
+    flex: 1;
+}
