Add about, informations and skills components

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="container grid">
+    <div class="flex-column">
+        <app-about-me></app-about-me>
+    </div>
+    <div class="flex-column">
+        <app-informations></app-informations>
+        <app-skills></app-skills>
+    </div>
+</div>
