--- a/src/app/components/home/skills/skills.component.html
+++ b/src/app/components/home/skills/skills.component.html
@@ -2,5 +2,9 @@
     <mat-card>
         <h3>Skills</h3>
         <app-skill-list></app-skill-list>
+        <a href="https://www.linkedin.com/in/jonathanbernard-developer/" mat-button color="primary" title="My LinkedIn">
+            <fa-icon [icon]="faExternalLinkAlt"></fa-icon>More on my LinkedIn
+        </a>
+        <div class="clearfix"></div>
     </mat-card>
 </aside>
