Add experiences component, edit skills + languages components and add models + constants data

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,11 @@
 <div class="container grid">
     <div class="flex-column">
         <app-about-me></app-about-me>
+        <app-experiences></app-experiences>
     </div>
     <div class="flex-column">
         <app-informations></app-informations>
         <app-skills></app-skills>
+        <app-languages></app-languages>
     </div>
 </div>
