--- a/src/app/components/home/skills/skill-list/skill-list.component.html
+++ b/src/app/components/home/skills/skill-list/skill-list.component.html
@@ -1,5 +1,5 @@
-<ul>
-    <li *ngFor="let skill of skills">
+<div class="skill-list">
+    <div *ngFor="let skill of skills">
         <app-skill [skill]="skill"></app-skill>
-    </li>
-</ul>
+    </div>
+</div>
