--- a/src/app/components/home/skills/skill-list/skill/skill.component.html
+++ b/src/app/components/home/skills/skill-list/skill/skill.component.html
@@ -1,4 +1,2 @@
-<div>
-    <span>{{skill.name}}</span>
-    <mat-progress-bar mode="determinate" [value]="skill.expertise"></mat-progress-bar>
-</div>
+{{skill.name}}
+<mat-progress-bar mode="determinate" [value]="skill.expertise"></mat-progress-bar>
