--- a/src/app/components/home/skills/skill-list/skill/skill.component.html
+++ b/src/app/components/home/skills/skill-list/skill/skill.component.html
@@ -1,2 +1,2 @@
 {{skill.name}}
-<mat-progress-bar mode="determinate" [value]="skill.expertise"></mat-progress-bar>
+<mat-progress-bar mode="determinate" [value]="skill.expertise" color="accent"></mat-progress-bar>
