--- a/src/app/layouts/layout/layout.component.html
+++ b/src/app/layouts/layout/layout.component.html
@@ -25,6 +25,7 @@
         <mat-sidenav-content>
             <app-banner></app-banner>
             <router-outlet></router-outlet>
+            <app-footer></app-footer>
         </mat-sidenav-content>
     </mat-sidenav-container>
 </main>
