--- a/src/app/layouts/layout/layout.component.scss
+++ b/src/app/layouts/layout/layout.component.scss
@@ -1,3 +1,6 @@
+.mat-sidenav-content {
+    background-color: var(--darker-white-color);
+}
 .brand {
     font-size: 1.5rem;
     margin-right: auto;
