--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -5,5 +5,7 @@ $tablet-breakpoint: 768px;
 $tablet-max-width: 720px;
 $tablet-landscape-breakpoint: 992px;
 $tablet-landscape-max-width: 930px;
-$computer-breakpoint: 1200px;
-$computer-max-width: 1125px;
+$small-computer-breakpoint: 1200px;
+$small-computer-max-width: 1125px;
+$medium-computer-breakpoint: 1440px;
+$medium-computer-max-width: 1350px;
