Add latest project component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,6 +2,7 @@
     <div class="flex-column">
         <app-about-me></app-about-me>
         <app-experiences></app-experiences>
+        <app-latest-project></app-latest-project>
     </div>
     <div class="flex-column">
         <app-informations></app-informations>
